# fez

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
tests/: CMakeLists.txt  README.md  tests.h
tests/compressible_ns/: CMakeLists.txt  compressible_mms_2d.prm  cylinder_2d.prm  mms_2d_all_dirichlet.output  mms_2d_all_dirichlet.prm  mms_2d_bdf1.output  mms_2d_bdf1.prm  mms_2d_bdf2.output  mms_2d_bdf2.prm  mms_2d_pressure_bc.output  mms_2d_pressure_bc.prm  mms_3d_bdf2.output  mms_3d_bdf2.prm  pressure_wave.geo  pressure_wave.prm
tests/elasticity/: CMakeLists.txt  mms_2d.mpirun=1.output  mms_2d.mpirun=6.output  mms_2d.prm  mms_2d_neo_hookean.prm  mms_2d_ogden_hyperelastic.output  mms_2d_ogden_hyperelastic.prm  mms_3d.mpirun=1.output  mms_3d.prm  mms_3d_neo_hookean.prm  mms_3d_ogden_hyperelastic.prm  presolver_forcing_jacobian.mpirun=1.output  presolver_forcing_jacobian.prm
tests/fsi/: 2d_flow_around_cylinder.output  2d_flow_around_cylinder.prm  CMakeLists.txt  cylinder_2d_coarse.msh  cylinder_3d.mpirun=1.output  cylinder_3d.mpirun=6.output  jacobian_matrix.output  jacobian_matrix.prm  mms_2d_coupled.mpirun=1.output  mms_2d_coupled.mpirun=6.output  mms_2d_coupled.prm  mms_2d_coupled_radial.mpirun=1.output  mms_2d_coupled_radial.mpirun=6.output  mms_2d_coupled_radial.prm  mms_2d_coupled_radial_open_bc.mpirun=1.output  mms_2d_coupled_radial_open_bc.mpirun=6.output  mms_2d_coupled_radial_open_bc.prm  mms_2d_coupled_variable_lame.mpirun=1.output  mms_2d_coupled_variable_lame.mpirun=6.output  mms_2d_coupled_variable_lame.prm  mms_2d_uncoupled.mpirun=1.output  mms_2d_uncoupled.mpirun=6.output  mms_2d_uncoupled.prm  mms_2d_uncoupled_weak.mpirun=1.output  mms_2d_uncoupled_weak.mpirun=6.output  mms_2d_uncoupled_weak.prm
tests/heat/: CMakeLists.txt  bdf1_adaptive_timestep.output  bdf1_adaptive_timestep.prm  bdf2_adaptive_timestep.output  bdf2_adaptive_timestep.prm  mms_2d_bdf2_time_step_adaptative.mpirun=1.output  mms_2d_bdf2_time_step_adaptative.mpirun=6.output  mms_2d_bdf2_time_step_adaptative.prm  mms_steady_2d.output  mms_steady_2d.prm  mms_steady_2d_amr.prm  mms_steady_2d_amr.with_p4est=true.mpirun=1.output  mms_steady_3d.output  mms_steady_3d.prm  mms_unsteady_2d_amr.prm  mms_unsteady_2d_amr.with_p4est=true.mpirun=1.output  mms_unsteady_3d_amr.prm  mms_unsteady_3d_amr.with_p4est=true.mpirun=1.output
tests/incompressible_chns/: CMakeLists.txt  adaptive_timestep_cfl.output  adaptive_timestep_cfl.prm  jacobian_matrix.output  jacobian_matrix.prm  jacobian_matrix_stabilized.mpirun=1.output  jacobian_matrix_stabilized.prm  jacobian_matrix_supg.mpirun=1.output  jacobian_matrix_supg.prm  jacobian_matrix_supg_abels_nlm.mpirun=1.output  jacobian_matrix_supg_abels_nlm.prm  jacobian_matrix_supg_degenerate_mobility.mpirun=1.output  jacobian_matrix_supg_degenerate_mobility.prm  jacobian_matrix_supg_ding_horriche.mpirun=1.output  jacobian_matrix_supg_ding_horriche.prm  jacobian_matrix_wetting.output  jacobian_matrix_wetting.prm  mms_2d_bdf2.mpirun=1.output  mms_2d_bdf2.mpirun=6.output  mms_2d_bdf2.prm  mms_2d_bdf2_ding_horriche.mpirun=1.output  mms_2d_bdf2_ding_horriche.prm  mms_2d_bdf2_sharp.mpirun=1.output  mms_2d_bdf2_sharp.prm  mms_2d_bdf2_stabilized.mpirun=6.output  mms_2d_bdf2_stabilized.prm  mms_3d_bdf2.mpirun=1.output  mms_3d_bdf2.mpirun=6.output  mms_3d_bdf2.prm  mms_chns_2d_space_degenerate_mobility.mpirun=1.output  mms_chns_2d_space_degenerate_mobility.mpirun=6.output  mms_chns_2d_space_degenerate_mobility.prm  mms_chns_2d_spacetime_abels_nlm.mpirun=1.output  mms_chns_2d_spacetime_abels_nlm.mpirun=6.output  mms_chns_2d_spacetime_abels_nlm.prm  mms_chns_2d_spacetime_degenerate_mobility.mpirun=1.output  mms_chns_2d_spacetime_degenerate_mobility.mpirun=6.output  mms_chns_2d_spacetime_degenerate_mobility.prm  mms_chns_2d_spacetime_ding_horriche.mpirun=1.output  mms_chns_2d_spacetime_ding_horriche.mpirun=6.output  (+14 more)
tests/incompressible_chns_ale/: CMakeLists.txt  jacobian_matrix.output  jacobian_matrix.prm  mms_2d_bdf2_ale_space.mpirun=1.output  mms_2d_bdf2_ale_space.mpirun=6.output  mms_2d_bdf2_ale_space.prm  mms_2d_bdf2_ale_spacetime.mpirun=1.output  mms_2d_bdf2_ale_spacetime.mpirun=6.output  mms_2d_bdf2_ale_spacetime.prm  mms_2d_bdf2_ale_time.prm  mms_2d_bdf2_ale_time_2.mpirun=6.output  mms_2d_bdf2_ale_time_2.prm  mms_2d_bdf2_ale_time_fixed_boundary.mpirun=1.output  mms_2d_bdf2_ale_time_fixed_boundary.mpirun=6.output  mms_2d_bdf2_ale_time_fixed_boundary.prm  mms_2d_bdf2_ale_time_moving_boundary.mpirun=1.output  mms_2d_bdf2_ale_time_moving_boundary.prm  mms_2d_bdf2_space.mpirun=1.output  mms_2d_bdf2_space.mpirun=6.output  mms_2d_bdf2_space.prm  mms_2d_bdf2_space_ding_horriche.mpirun=1.output  mms_2d_bdf2_space_ding_horriche.prm  mms_2d_bdf2_space_sharp.mpirun=1.output  mms_2d_bdf2_space_sharp.prm  mms_2d_bdf2_spacetime_fixed_boundary.mpirun=1.output  mms_2d_bdf2_spacetime_fixed_boundary.mpirun=6.output  mms_2d_bdf2_spacetime_fixed_boundary.prm  mms_2d_bdf2_spacetime_moving_boundary.mpirun=1.output  mms_2d_bdf2_spacetime_moving_boundary.mpirun=6.output  mms_2d_bdf2_spacetime_moving_boundary.prm  mms_2d_bdf2_spacetime_stabilized.mpirun=1.output  mms_2d_bdf2_spacetime_stabilized.mpirun=6.output  mms_2d_bdf2_time.mpirun=1.output  mms_2d_bdf2_time.mpirun=6.output  mms_2d_bdf2_time.prm  mms_chns_ale_2d_spacetime_stab.mpirun=1.output  mms_chns_ale_2d_spacetime_stab.mpirun=6.output  mms_chns_ale_2d_spacetime_stab.prm  mms_chns_ale_2d_spacetime_stab_ding_horriche.mpirun=1.output  mms_chns_ale_2d_spacetime_stab_ding_horriche.prm  (+5 more)
tests/incompressible_chns_ale_enlarged/: CMakeLists.txt  jacobian_matrix.output  jacobian_matrix.prm  jacobian_matrix_abels_nlm.output  jacobian_matrix_abels_nlm.prm  jacobian_matrix_degenerate_mobility.output  jacobian_matrix_degenerate_mobility.prm  jacobian_matrix_ding_horriche.output  jacobian_matrix_ding_horriche.prm  mms_chns_ale_enlarged_2d_spacetime.mpirun=1.output  mms_chns_ale_enlarged_2d_spacetime.mpirun=6.output  mms_chns_ale_enlarged_2d_spacetime.prm  mms_chns_ale_enlarged_2d_spacetime_ding_horriche.mpirun=1.output  (+5 more)
(+704 files in other folders)
