add_subdirectory(incompressible_ns)
add_subdirectory(incompressible_ns_lambda)
add_subdirectory(monolithic_fsi)
add_subdirectory(fsi)
add_subdirectory(incompressible_chns)
add_subdirectory(incompressible_chns_ale)
add_subdirectory(incompressible_chns_ale_enlarged)
add_subdirectory(heat)
add_subdirectory(linear_elasticity)
add_subdirectory(unit_tests)
add_subdirectory(unit_tests/metric_tensor)
